--- a/recalculation-2024/calculation.Rmd
+++ b/recalculation-2024/calculation.Rmd
@@ -12,34 +12,47 @@ knitr::opts_chunk$set(
   warning = FALSE,
   results = "hide"
 )
-
 ```
 
 ```{r}
 library(tidyverse)
 inboundcall <- read_csv("clean-data/inbound_call.csv")
-
 ```
 
 # October
 
 ```{r}
 october_leads <- read_csv("october-dm-data/october_leads.csv")
-inboundcall_oct <- inboundcall |>
-  filter(str_detect(Campaign_Tags, "oct"))
+
+october_leads |>
+  filter(Created_Date_SFDC >= ymd("2023-10-03") & Created_Date_SFDC <= ymd("2023-11-07")) |>
+  nrow()
+
+
+october_leads |>
+    filter(Created_Date_SFDC >= ymd("2023-10-03") & Created_Date_SFDC <= ymd("2023-11-07")) |>
+  group_by(MQL) |>
+  summarise(counts = n())
+
+
+october_leads |>
+      filter(Created_Date_SFDC >= ymd("2023-10-03") & Created_Date_SFDC <= ymd("2023-11-07")) |>
+  filter(Opportunity_Created_Date_SFDC >= ymd("2023-10-03") & Opportunity_Created_Date_SFDC <= ymd("2023-11-07")) |>
+  group_by(SQL) |>
+  summarise(counts = n())
+
+october_leads |>
+  filter(Created_Date_SFDC >= ymd("2023-10-03") & Created_Date_SFDC <= ymd("2023-11-07")) |>
+  filter(Placeholder_Live_Date_SFDC >= ymd("2023-10-03") & Placeholder_Live_Date_SFDC <= ymd("2023-11-07")) |>
+  group_by(Onboarded) |>
+  summarise(counts = n())
+
+# october_leads |>
+#   filter(Placeholder_Live_Date_SFDC >= ymd("2023-10-03") & Placeholder_Live_Date_SFDC <= ymd("2023-11-07")) |>
+#   group_by(CW) |>
+#   summarise(counts = n())
 ```
 
-```{r}
-october_leads |> 
-  group_by(MQL, SQL, CW) |> 
-  summarise(counts=n())
-```
-
-```{r}
-inboundcall_oct |> 
-  group_by(Campaign_Tags) |> 
-  summarise(count=n())
-```
 
 
 # November 
@@ -47,58 +60,168 @@ inboundcall_oct |>
 ```{r}
 november_leads <- read_csv("november-dm-data/november_leads.csv")
 
-inboundcall_nov <- inboundcall |>
-  filter(str_detect(Campaign_Tags, "nov"))
-  # distinct(Phone_IB_Call, .keep= TRUE)
+# distinct(Phone_IB_Call, .keep= TRUE)
+
+# MEL
+november_leads |>
+  filter(Created_Date_SFDC >= ymd("2023-11-03") & Created_Date_SFDC <= ymd("2023-12-05")) |>
+  nrow()
+
+# MQL
+november_leads |>
+  filter(Created_Date_SFDC >= ymd("2023-11-03") & Created_Date_SFDC <= ymd("2023-12-05")) |>
+  group_by(MQL) |>
+  summarise(counts = n())
+
+# SQL
+november_leads |>
+  filter(Created_Date_SFDC >= ymd("2023-11-03") & Created_Date_SFDC <= ymd("2023-12-05")) |>
+  filter(Opportunity_Created_Date_SFDC >= ymd("2023-11-03") &
+    Opportunity_Created_Date_SFDC <= ymd("2023-12-05")) |>
+  group_by(SQL) |>
+  summarise(counts = n())
+
+# CW
+
+november_leads |>
+  filter(Created_Date_SFDC >= ymd("2023-11-03") & Created_Date_SFDC <= ymd("2023-12-05")) |>
+  filter(Placeholder_Live_Date_SFDC >= ymd("2023-11-03") &
+    Placeholder_Live_Date_SFDC <= ymd("2023-12-05")) |>
+    filter(Opportunity_Created_Date_SFDC >= ymd("2023-11-03") &
+    Opportunity_Created_Date_SFDC <= ymd("2023-12-05")) |>
+  group_by(Onboarded) |>
+  summarise(counts = n())
+
+
+## CW
+november_leads |>
+  filter(Created_Date_SFDC >= ymd("2023-11-03") & Created_Date_SFDC <= ymd("2023-12-05")) |>
+  filter(Placeholder_Live_Date_SFDC >= ymd("2023-11-03") &
+    Placeholder_Live_Date_SFDC <= ymd("2023-12-05")) |>
+    filter(Opportunity_Created_Date_SFDC >= ymd("2023-12-05")) |>
+  group_by(Onboarded) |>
+  summarise(counts = n())
+
+# november_leads |>
+#   filter(Created_Date_SFDC >= ymd("2023-11-03") & Created_Date_SFDC <= ymd("2023-12-05")) |>
+#   filter(Placeholder_Live_Date_SFDC >= ymd("2023-11-03") &
+#     Placeholder_Live_Date_SFDC <= ymd("2023-12-05")) |>
+#   filter(Placeholder_Live_Date_SFDC >= ymd("2023-11-03") &
+#     Placeholder_Live_Date_SFDC <= ymd("2023-12-05")) |>
+#   group_by(CW) |>
+#   summarise(counts = n())
 ```
 
-```{r}
-november_leads |> 
-  group_by(MQL, SQL, CW) |> 
-  summarise(counts=n())
-
-inboundcall_nov |> 
-  group_by(Campaign_Tags) |> 
-  summarise(count=n())
-```
 
 # December
 
 ```{r cars}
 december_leads <- read_csv("december-dm-data/december_leads.csv")
-inboundcall_dec <- inboundcall |>
-  filter(str_detect(Campaign_Tags, "dec"))
-  # distinct(Phone_IB_Call, .keep= TRUE)
-```
 
-```{r}
-december_leads |> 
-  group_by(MQL, SQL, CW) |> 
-  summarise(counts=n())
-
-inboundcall_dec |> 
-  group_by(Campaign_Tags) |> 
-  summarise(count=n())
-```
-
-
-
-```{r}
 december_leads <- december_leads |> 
+  select(MQL, SQL, Onboarded, CW, Created_Date_SFDC, Opportunity_Created_Date_SFDC, Placeholder_Live_Date_SFDC, Campaign_Tags, Latest_Campaign_SFDC, Latest_Reengaged_Date_SFDC)
+
+december_leads |>
+  filter(Created_Date_SFDC >= ymd("2023-12-05") 
+         & Created_Date_SFDC <= ymd("2023-12-31")) |>
+  nrow()
+
+## MQL
+december_leads |>
+  filter(Created_Date_SFDC >= ymd("2023-12-05") 
+         & Created_Date_SFDC <= ymd("2023-12-31")) |>
+  group_by(MQL) |>
+  summarise(counts = n())
+## SQL 
+december_leads |>
+  filter(Created_Date_SFDC >= ymd("2023-12-05") 
+         & Created_Date_SFDC <= ymd("2023-12-31")) |>
+  filter(Opportunity_Created_Date_SFDC >= ymd("2023-12-05") & Opportunity_Created_Date_SFDC <= ymd("2023-12-31")) |>
+  group_by(SQL) |>
+  summarise(counts = n())
+
+## SQL Past Months
+december_leads |>
+  filter(Created_Date_SFDC >= ymd("2023-12-05") 
+         & Created_Date_SFDC <= ymd("2023-12-31")) |>
+  filter(Opportunity_Created_Date_SFDC >= ymd("2023-12-31")) |>
+  group_by(SQL) |>
+  summarise(counts = n())
+
+## CW
+december_leads |>
+  filter(Created_Date_SFDC >= ymd("2023-12-05") & Created_Date_SFDC <= ymd("2023-12-31")) |>
+  filter(Opportunity_Created_Date_SFDC >= ymd("2023-12-05") & Opportunity_Created_Date_SFDC <= ymd("2023-12-31")) |>
+  filter(Placeholder_Live_Date_SFDC >= ymd("2023-12-05") & Placeholder_Live_Date_SFDC <= ymd("2023-12-31")) |>
+  group_by(Onboarded) |>
+  summarise(counts = n())
+
+## CW Past Campaign
+december_leads |>
+  filter(Created_Date_SFDC >= ymd("2023-12-05") & Created_Date_SFDC <= ymd("2023-12-31")) |>
+  filter(Opportunity_Created_Date_SFDC >= ymd("2023-12-05") & Opportunity_Created_Date_SFDC <= ymd("2023-12-31")) |>
+  filter(Placeholder_Live_Date_SFDC >= ymd("2024-01-01")) |>
+  group_by(Onboarded) |>
+  summarise(counts = n())
+
+```
+
+# January
+
+```{r}
+january_leads <- read_csv("~/PerformanceMarketing/direct-mail-2024/jan-dm-2024/clean_data/january_leads.csv")
+
+january_leads |>
+  filter(Created_Date_SFDC >= ymd("2024-01-01") & Created_Date_SFDC <= ymd("2024-02-02")) |>
+  nrow()
+
+january_leads |>
+  filter(Created_Date_SFDC >= ymd("2024-01-01") & Created_Date_SFDC <= ymd("2024-02-02")) |>
+  group_by(MQL) |>
+  summarise(counts = n())
+
+
+january_leads |>
+  filter(Created_Date_SFDC >= ymd("2024-01-01") & Created_Date_SFDC <= ymd("2024-02-02")) |>
+  filter(Opportunity_Created_Date_SFDC >= ymd("2024-01-01") & Opportunity_Created_Date_SFDC <= ymd("2024-02-02")) |>
+  group_by(SQL) |>
+  summarise(counts = n())
+
+
+
+january_leads |>
+  filter(Created_Date_SFDC >= ymd("2024-01-01") & Created_Date_SFDC <= ymd("2024-02-02")) |>
+  filter(Opportunity_Created_Date_SFDC >= ymd("2024-01-01") & Opportunity_Created_Date_SFDC <= ymd("2024-02-02")) |>
+  filter(Placeholder_Live_Date_SFDC >= ymd("2024-01-01") & Placeholder_Live_Date_SFDC <= ymd("2024-02-02")) |>
+  group_by(Onboarded) |>
+  summarise(counts = n())
+
+
+january_leads |>
+  filter(Created_Date_SFDC >= ymd("2024-01-01") & Created_Date_SFDC <= ymd("2024-02-02")) |>
+  filter(Opportunity_Created_Date_SFDC >= ymd("2024-01-01") & Opportunity_Created_Date_SFDC <= ymd("2024-02-02")) |>
+  filter(Placeholder_Live_Date_SFDC >= ymd("2024-01-01") & Placeholder_Live_Date_SFDC <= ymd("2024-02-02")) |>
+  filter(Placeholder_Live_Date_SFDC >= ymd("2024-01-01") & Placeholder_Live_Date_SFDC <= ymd("2024-02-02")) |>
+  group_by(CW) |>
+  summarise(counts = n())
+```
+
+# Combine all
+```{r}
+december_leads <- december_leads |>
   mutate(Campaign_Group = "December Leads")
 
-november_leads <- november_leads |> 
-    mutate(Campaign_Group = "November Leads")
+november_leads <- november_leads |>
+  mutate(Campaign_Group = "November Leads")
 
-october_leads <- october_leads |> 
-    mutate(Campaign_Group = "October Leads")
+october_leads <- october_leads |>
+  mutate(Campaign_Group = "October Leads")
 
 
-sfdc_leads__c = bind_rows(december_leads, november_leads, october_leads)
+sfdc_leads__c <- bind_rows(december_leads, november_leads, october_leads)
 
-sfdc_leads__c <- sfdc_leads__c |> 
-  select( "Campaign_Group", "flow", "types", "CW", "SQL", "MQL", "Campaign_Tags","Campaign_by_Month", everything())
+sfdc_leads__c <- sfdc_leads__c |>
+  select("Campaign_Group", "flow", "types", "CW", "SQL", "MQL", "Campaign_Tags", "Campaign_by_Month", everything())
 
-write_csv(sfdc_leads__c,"clean-data/sfdc_leads__c.csv",na="")
+write_csv(sfdc_leads__c, "clean-data/sfdc_leads__c.csv", na = "")
 ```
-
