--- a/tenure/variables_selection.ipynb
+++ b/tenure/variables_selection.ipynb
@@ -2281,7 +2281,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "venv-marketing-operation",
    "language": "python",
    "name": "python3"
   },
