--- a/campaign_touch_points/3.5_clean_lead_table.ipynb
+++ b/campaign_touch_points/3.5_clean_lead_table.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "2bab8cf3",
    "metadata": {},
    "outputs": [],
@@ -10,6 +10,16 @@
     "import janitor\n",
     "import pandas as pd\n",
     "import re\n",
+    "from datetime import datetime\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "a72dae7f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "leads = pd.read_csv('data/all_time_leads.csv').clean_names()\n",
     "\n",
@@ -46,132 +56,126 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4756ed67",
+   "metadata": {},
+   "source": [
+    "Change timestamp format into date"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "id": "fbb0679f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/8c/z2jj76jx2wq4dxt7jlmgxknm0000gn/T/ipykernel_2667/2072314949.py:20: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "  selected_leads[col] = pd.to_datetime(selected_leads[col], errors='coerce').dt.date\n",
+      "/var/folders/8c/z2jj76jx2wq4dxt7jlmgxknm0000gn/T/ipykernel_2667/2072314949.py:20: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "  selected_leads[col] = pd.to_datetime(selected_leads[col], errors='coerce').dt.date\n",
+      "/var/folders/8c/z2jj76jx2wq4dxt7jlmgxknm0000gn/T/ipykernel_2667/2072314949.py:20: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "  selected_leads[col] = pd.to_datetime(selected_leads[col], errors='coerce').dt.date\n"
+     ]
+    }
+   ],
    "source": [
-    "date_cols = [\n",
-    "    'created_date',\n",
+    "# date_cols = [\n",
+    "#     'created_date',\n",
+    "#     'first_mel_timestamp',\n",
+    "#     'latest_mql_timestamp',\n",
+    "#     'assigned_time_ae_',\n",
+    "#     'opportunity_created_date',\n",
+    "#     'closed_won_date'\n",
+    "# ]\n",
+    "\n",
+    "# date_cols = selected_leads[date_cols]\n",
+    "# date_cols.to_csv('data/exported_data/date_cols.csv', index=False)\n",
+    "\n",
+    "timestamp_col = [\n",
     "    'first_mel_timestamp',\n",
     "    'latest_mql_timestamp',\n",
     "    'assigned_time_ae_',\n",
-    "    'opportunity_created_date',\n",
-    "    'closed_won_date'\n",
     "]\n",
     "\n",
-    "\n",
-    "date_cols = selected_leads[date_cols]\n",
-    "date_cols.to_csv('data/date_cols.csv', index=False)\n",
-    "\n"
+    "for col in timestamp_col:\n",
+    "    selected_leads[col] = pd.to_datetime(selected_leads[col], errors='coerce').dt.date\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "314c18d8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0a9aba32",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "import warnings\n",
-    "\n",
-    "warnings.filterwarnings(\n",
-    "    \"ignore\",\n",
-    "    category=UserWarning,\n",
-    "    message=r\".*infer_datetime_format.*\"\n",
-    ")\n",
-    "\n",
-    "for col in date_cols:\n",
-    "    selected_leads[col] = (\n",
-    "        pd.to_datetime(\n",
-    "            selected_leads[col],\n",
-    "            infer_datetime_format=True,\n",
-    "            errors='coerce'\n",
-    "        )\n",
-    "        .dt.strftime('%Y-%m-%d')\n",
-    "    )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "a614dc5b",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Sort the DataFrame by first_mel_timestamp (newest first)\n",
+    "selected_leads = selected_leads.sort_values(by='first_mel_timestamp', ascending=False)\n",
     "\n",
-    "# 3. Sort by recency (newest first)\n",
-    "df_sorted = selected_leads.sort_values(\n",
-    "    by=date_cols,\n",
-    "    ascending=False,\n",
-    "    na_position='last'   # treat NaT as oldest\n",
-    ")\n"
+    "# Assign row number within each ID group\n",
+    "selected_leads['row_num'] = selected_leads.groupby('brizo_id').cumcount() + 1\n",
+    "\n",
+    "# Keep only the top row (like QUALIFY row_number = 1)\n",
+    "top_leads = selected_leads[selected_leads['row_num'] == 1].copy()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "c97b6af2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "25837b92",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "            lead_id mobile_primary business_phone_line_1 brizo_id  \\\n",
-      "1   00QUo00000SvBGL     5599745392                  None      NaN   \n",
-      "15  00QUo00000SqruX     3477022771            8563388897      NaN   \n",
-      "24  00QUo00000Spu6U     9177709615            6318424333      NaN   \n",
-      "53  00QUo00000Sg06l     4709815185            8437592868      NaN   \n",
-      "51  00QUo00000SgIQF     3474102634            5678680082      NaN   \n",
+      "               lead_id mobile_primary business_phone_line_1          brizo_id  \\\n",
+      "11623  00QUo00000SrWhZ     6179975325            8574040199  c2638ca51cce596d   \n",
+      "20861  00QUo00000Sr1ac     7272398834            7274479663  a862fd2975ec7c44   \n",
+      "19238  00Q8b00001xKLPF     7049571547            7048228830  d615ce74fd940a54   \n",
+      "12144  00QUo00000SmMKi     7202263389            3032371133  62800acf4b06529e   \n",
+      "19845  00QUo00000STVhp     8599072053            8598232888  7aba6d8ee839fe7a   \n",
       "\n",
-      "   created_date first_mel_timestamp latest_mql_timestamp assigned_time_ae_  \\\n",
-      "1    2025-07-08          2025-07-08           2025-07-08               NaN   \n",
-      "15   2025-07-07          2025-07-07           2025-07-08        2025-07-07   \n",
-      "24   2025-07-07          2025-07-07           2025-07-07        2025-07-07   \n",
-      "53   2025-07-04          2025-07-04           2025-07-04        2025-07-04   \n",
-      "51   2025-07-04          2025-07-04           2025-07-04               NaN   \n",
+      "      created_date first_mel_timestamp latest_mql_timestamp assigned_time_ae_  \\\n",
+      "11623     4/4/2023          2025-07-08           2025-07-08        2025-07-08   \n",
+      "20861   10/31/2022          2025-07-07           2025-07-08        2025-07-07   \n",
+      "19238   10/31/2022          2025-07-07           2025-07-07        2025-07-07   \n",
+      "12144    3/22/2023          2025-07-06                  NaT               NaT   \n",
+      "19845   10/31/2022          2025-07-01           2025-07-01        2025-07-01   \n",
       "\n",
-      "   opportunity_created_date closed_won_date           stage  \\\n",
-      "1                       NaN             NaN             NaN   \n",
-      "15               2025-07-08             NaN  Discovery/Demo   \n",
-      "24                      NaN             NaN             NaN   \n",
-      "53               2025-07-04             NaN  Discovery/Demo   \n",
-      "51                      NaN             NaN             NaN   \n",
+      "      opportunity_created_date closed_won_date           stage  \\\n",
+      "11623                      NaN             NaN             NaN   \n",
+      "20861                 7/8/2025             NaN  Discovery/Demo   \n",
+      "19238                 7/7/2025        7/7/2025      Closed Won   \n",
+      "12144                      NaN             NaN             NaN   \n",
+      "19845                      NaN             NaN             NaN   \n",
       "\n",
-      "   unqualified_reason closed_lost_reason  \n",
-      "1                 NaN                NaN  \n",
-      "15                NaN                NaN  \n",
-      "24                NaN                NaN  \n",
-      "53                NaN                NaN  \n",
-      "51                NaN                NaN  \n"
+      "      unqualified_reason closed_lost_reason  row_num  \n",
+      "11623                NaN                NaN      1.0  \n",
+      "20861                NaN                NaN      1.0  \n",
+      "19238                NaN                NaN      1.0  \n",
+      "12144                NaN                NaN      1.0  \n",
+      "19845                NaN                NaN      1.0  \n"
      ]
     }
    ],
    "source": [
-    "\n",
-    "\n",
-    "# Inspect or save\n",
-    "print(result.head())\n",
-    "result.to_csv('data/deduped_leads_long.csv', index=False)"
+    "# inspect\n",
+    "print(top_leads.head(5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "25837b92",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save\n",
+    "top_leads.to_csv('data/exported_data/deduped_leads_long.csv', index=False)"
    ]
   }
  ],
