--- a/campaign_touch_points/3_combined_all_brizo_list.ipynb
+++ b/campaign_touch_points/3_combined_all_brizo_list.ipynb
@@ -81,7 +81,7 @@
          "type": "integer"
         }
        ],
-       "ref": "2fd850df-419d-4320-ba78-70dbb2dc9370",
+       "ref": "a44aac8a-d03d-4d63-85b3-1b930ccf6909",
        "rows": [
         [
          "0",
@@ -453,13 +453,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "ba3d4f19",
    "metadata": {},
    "outputs": [],
    "source": [
-    "counts.to_csv('data/counts.csv', index=False)\n",
-    "combined.to_csv('data/combined.csv', index=False)\n",
+    "counts.to_csv('data/exported_data/counts.csv', index=False)\n",
+    "combined.to_csv('data/exported_data/combined.csv', index=False)\n",
     "\n"
    ]
   }
