--- a/campaign_touch_points/4_brizo_matching_leads.ipynb
+++ b/campaign_touch_points/4_brizo_matching_leads.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "dc804e55",
    "metadata": {},
    "outputs": [],
@@ -11,13 +11,13 @@
     "import janitor\n",
     "import numpy as np\n",
     "\n",
-    "leads = pd.read_csv('data/deduped_leads_long.csv').clean_names()\n",
-    "brizo = pd.read_csv('data/combined.csv').clean_names()"
+    "leads = pd.read_csv('data/exported_data/deduped_leads_long.csv').clean_names()\n",
+    "brizo = pd.read_csv('data/exported_data/combined.csv').clean_names()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "f10383a9",
    "metadata": {},
    "outputs": [
@@ -42,7 +42,7 @@
     "\n",
     "df['year_month'] = df['list_source'].str.extract(r'(\\d{4}-\\d{2})')\n",
     "\n",
-    "df.to_csv('data/brizo_list_with_ym.csv', index=False)\n",
+    "df.to_csv('data/exported_data/brizo_list_with_ym.csv', index=False)\n",
     "\n",
     "# 4) Inspect\n",
     "print(df.head())\n"
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "202c46c0",
    "metadata": {},
    "outputs": [
@@ -79,7 +79,7 @@
          "type": "integer"
         }
        ],
-       "ref": "691c66ba-4f5b-482b-a1f7-540c72739d72",
+       "ref": "8fbc7880-e8cd-45a2-bd58-cb0e0477d79f",
        "rows": [
         [
          "0",
@@ -521,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "7301ad70",
    "metadata": {},
    "outputs": [],
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "7a9db76a",
    "metadata": {},
    "outputs": [
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "id": "e41b6371",
    "metadata": {},
    "outputs": [
@@ -576,157 +576,62 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   lead_id mobile_primary business_phone_line_1          brizo_id  \\\n",
-      "0      NaN    70495715470           70482288300  d615ce74fd940a54   \n",
-      "1      NaN    91721387220           35224105570  e3a294abf207a3bb   \n",
-      "2      NaN    91737419280           51884277770  59ff82b86d0e8938   \n",
-      "3      NaN    31553039930           31594696650  3ee9926a5fd802dc   \n",
-      "4      NaN    73473036080           73425406160  05c988dd31b8a82d   \n",
+      "           brizo_id phone_number  count          lead_id  mobile_primary  \\\n",
+      "0  00147fccd962ca33   7327929653      4  00Q8b00001xKJGh             NaN   \n",
+      "1  00282d2fa2df2c18   6312183888     21  00Q8b000021p6WV             NaN   \n",
+      "2  00370ffaea501b02   4106509949     15  00QUo00000RWj47    6.462091e+09   \n",
+      "3  003bf5ec93f0b157   7326571616     21  00QUo000009gYJS    7.329305e+09   \n",
+      "4  005be3f96749e3e1   2057987288      4  00Q8b00001xKGX1             NaN   \n",
       "\n",
-      "  created_date first_mel_timestamp latest_mql_timestamp assigned_time_ae_  \\\n",
-      "0   2022-10-31          2025-07-07           2025-07-07        2025-07-07   \n",
-      "1   2022-10-31                 NaT                  NaT        2025-06-23   \n",
-      "2   2022-10-31          2025-06-20           2025-06-20        2025-06-20   \n",
-      "3   2022-10-31          2025-06-18           2025-06-18        2025-06-18   \n",
-      "4   2022-10-31          2025-05-30           2025-06-02        2025-05-31   \n",
+      "   business_phone_line_1 created_date first_mel_timestamp  \\\n",
+      "0           7.327930e+09   10/31/2022          2023-11-01   \n",
+      "1           6.312184e+09     4/4/2023          2023-12-28   \n",
+      "2           4.106510e+09    2/25/2025          2025-02-25   \n",
+      "3           7.326572e+09   10/31/2022          2024-04-23   \n",
+      "4           2.057987e+09   10/31/2022          2023-12-19   \n",
       "\n",
-      "  opportunity_created_date closed_won_date       stage unqualified_reason  \\\n",
-      "0               2025-07-07      2025-07-07  Closed Won                NaN   \n",
-      "1               2025-06-23      2025-06-26   Onboarded                NaN   \n",
-      "2               2025-06-20      2025-06-23   Onboarded                NaN   \n",
-      "3               2025-06-18      2025-06-19   Onboarded                NaN   \n",
-      "4               2025-06-02      2025-06-08  Closed Won                NaN   \n",
+      "  latest_mql_timestamp assigned_time_ae_ opportunity_created_date  \\\n",
+      "0                  NaN               NaN                      NaN   \n",
+      "1                  NaN               NaN                      NaN   \n",
+      "2           2025-06-17        2025-06-17                6/17/2025   \n",
+      "3           2024-04-23        2024-04-23                4/23/2024   \n",
+      "4                  NaN               NaN                      NaN   \n",
       "\n",
-      "  closed_lost_reason phone_number  count match_key brizo_id_x brizo_id_y  \n",
-      "0                NaN   7048228830     18  brizo_id        NaN        NaN  \n",
-      "1                NaN   3522410557     21  brizo_id        NaN        NaN  \n",
-      "2                NaN   5188427777     18  brizo_id        NaN        NaN  \n",
-      "3                NaN   3159469665     15  brizo_id        NaN        NaN  \n",
-      "4                NaN   7342540616     19  brizo_id        NaN        NaN  \n"
+      "  closed_won_date           stage unqualified_reason closed_lost_reason  \\\n",
+      "0             NaN             NaN          Duplicate                NaN   \n",
+      "1             NaN             NaN                NaN                NaN   \n",
+      "2             NaN  Discovery/Demo                NaN                NaN   \n",
+      "3             NaN     Closed Lost                NaN              Price   \n",
+      "4             NaN             NaN          Duplicate                NaN   \n",
+      "\n",
+      "  match_key  \n",
+      "0  brizo_id  \n",
+      "1  brizo_id  \n",
+      "2  brizo_id  \n",
+      "3  brizo_id  \n",
+      "4  brizo_id  \n"
      ]
     }
    ],
    "source": [
-    "\n",
-    "# ————————————————\n",
-    "# Prep: convert dates & clean phones\n",
-    "# ————————————————\n",
-    "date_cols = [\n",
-    "    'closed_won_date',\n",
-    "    'opportunity_created_date',\n",
-    "    'assigned_time_ae_',\n",
-    "    'latest_mql_timestamp',\n",
-    "    'first_mel_timestamp',\n",
-    "    'created_date'\n",
-    "]\n",
-    "\n",
-    "# 1) parse your date columns once\n",
-    "for col in date_cols:\n",
-    "    selected_leads[col] = pd.to_datetime(\n",
-    "        selected_leads[col],\n",
-    "        errors='coerce'\n",
-    "    )\n",
-    "\n",
-    "# 2) normalize phone strings\n",
-    "for col in ['mobile_primary', 'business_phone_line_1']:\n",
-    "    selected_leads[col] = (\n",
-    "        selected_leads[col]\n",
-    "          .astype(str)\n",
-    "          .str.replace(r'\\D+', '', regex=True)\n",
-    "    )\n",
-    "\n",
-    "brizo_counts['phone_number'] = (\n",
-    "    brizo_counts['phone_number']\n",
-    "      .astype(str)\n",
-    "      .str.replace(r'\\D+', '', regex=True)\n",
-    ")\n",
-    "\n",
-    "# ————————————————\n",
-    "# Build brizo_counts if you haven’t yet\n",
-    "# ————————————————\n",
-    "# brizo_counts = (\n",
-    "#     brizo\n",
-    "#       .groupby(['brizo_id', 'phone_number'])\n",
-    "#       .size()\n",
-    "#       .reset_index(name='count')\n",
-    "# )\n",
-    "\n",
-    "# ————————————————\n",
-    "# 1) Match by brizo_id\n",
-    "# ————————————————\n",
-    "match_brizo = selected_leads.merge(\n",
-    "    brizo_counts[['brizo_id','phone_number','count']],\n",
+    "match_brizo = brizo_counts.merge(\n",
+    "    selected_leads,\n",
     "    on='brizo_id',\n",
     "    how='inner'\n",
     ").assign(match_key='brizo_id')\n",
     "\n",
     "\n",
-    "# ————————————————\n",
-    "# 2) Match by business_phone_line_1\n",
-    "# ————————————————\n",
-    "match_business = selected_leads.merge(\n",
-    "    brizo_counts[['brizo_id','phone_number','count']],\n",
-    "    left_on='business_phone_line_1',\n",
-    "    right_on='phone_number',\n",
-    "    how='inner'\n",
-    ").assign(match_key='business_phone_line_1')\n",
-    "\n",
-    "\n",
-    "# ————————————————\n",
-    "# 3) Match by mobile_primary\n",
-    "# ————————————————\n",
-    "match_mobile = selected_leads.merge(\n",
-    "    brizo_counts[['brizo_id','phone_number','count']],\n",
-    "    left_on='mobile_primary',\n",
-    "    right_on='phone_number',\n",
-    "    how='inner'\n",
-    ").assign(match_key='mobile_primary')\n",
-    "\n",
-    "\n",
-    "# ————————————————\n",
-    "# 4) Combine all matches into one DataFrame\n",
-    "# ————————————————\n",
-    "matched = pd.concat(\n",
-    "    [match_brizo, match_business, match_mobile],\n",
-    "    ignore_index=True\n",
-    ")\n",
-    "\n",
-    "\n",
-    "# ————————————————\n",
-    "# 5) Dedupe by brizo_id, keeping the most recent by your date‐priority\n",
-    "# ————————————————\n",
-    "# sort descending so “most recent” appears first for each brizo_id\n",
-    "matched = matched.sort_values(\n",
-    "    by=date_cols,\n",
-    "    ascending=False,\n",
-    "    na_position='last'\n",
-    ")\n",
-    "\n",
-    "final_matched = matched.drop_duplicates(\n",
-    "    subset='brizo_id',\n",
-    "    keep='first'\n",
-    ").reset_index(drop=True)\n",
-    "\n",
-    "\n",
-    "# ————————————————\n",
-    "# Inspect or save\n",
-    "# ————————————————\n",
-    "print(final_matched.head())\n"
+    "print(match_brizo.head())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "id": "fa33bea8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "final_matched = final_matched[['brizo_id', 'phone_number', 'count', 'lead_id', \n",
-    "                               'created_date', 'first_mel_timestamp', 'latest_mql_timestamp', \n",
-    "                               'assigned_time_ae_', 'opportunity_created_date', 'closed_won_date', 'stage', \n",
-    "                               'unqualified_reason', 'closed_lost_reason', 'match_key']]\n",
-    "final_matched.to_csv('data/final_matched.csv', index=False)"
+    "match_brizo.to_csv('data/exported_data/match_brizo.csv', index=False)"
    ]
   }
  ],
