--- a/campaign_touch_points/3_combined_all_brizo_list.ipynb
+++ b/campaign_touch_points/3_combined_all_brizo_list.ipynb
@@ -57,6 +57,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "id": "8677d122",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Brizo ID campaign log saved successfully.\n"
+     ]
+    }
+   ],
+   "source": [
+    "brizo_id_campaign_log = combined.drop(columns=['phone_number'])\n",
+    "brizo_id_campaign_log.to_csv('brizo_id_campaign_log.csv', index=False, encoding='utf-8-sig')\n",
+    "print(\"Brizo ID campaign log saved successfully.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "id": "93391578",
    "metadata": {},
