--- a/tenure/testing_census_api.ipynb
+++ b/tenure/testing_census_api.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "9a8107e3",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "8fff4aa0",
    "metadata": {},
    "outputs": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "909c3198",
    "metadata": {},
    "outputs": [
@@ -52,11 +52,6 @@
          "name": "zip_code",
          "rawType": "object",
          "type": "string"
-        },
-        {
-         "name": "total_pop",
-         "rawType": "int64",
-         "type": "integer"
         },
         {
          "name": "white_alone",
@@ -109,12 +104,11 @@
          "type": "float"
         }
        ],
-       "ref": "1b8d8602-2f66-418e-9a0b-58be44a20302",
+       "ref": "e4e28dd1-79b8-4c14-99b7-339693fc24f4",
        "rows": [
         [
          "0",
          "00601",
-         "16721",
          "13904",
          "314",
          "19",
@@ -129,7 +123,6 @@
         [
          "1",
          "00602",
-         "37510",
          "13781",
          "520",
          "44",
@@ -144,7 +137,6 @@
         [
          "2",
          "00603",
-         "48317",
          "35550",
          "1572",
          "8",
@@ -159,7 +151,6 @@
         [
          "3",
          "00606",
-         "5435",
          "3697",
          "12",
          "15",
@@ -174,7 +165,6 @@
         [
          "4",
          "00610",
-         "25413",
          "6582",
          "525",
          "0",
@@ -188,7 +178,7 @@
         ]
        ],
        "shape": {
-        "columns": 12,
+        "columns": 11,
         "rows": 5
        }
       },
@@ -212,7 +202,6 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>zip_code</th>\n",
-       "      <th>total_pop</th>\n",
        "      <th>white_alone</th>\n",
        "      <th>black_alone</th>\n",
        "      <th>asian_alone</th>\n",
@@ -229,7 +218,6 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>00601</td>\n",
-       "      <td>16721</td>\n",
        "      <td>13904</td>\n",
        "      <td>314</td>\n",
        "      <td>19</td>\n",
@@ -244,7 +232,6 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>00602</td>\n",
-       "      <td>37510</td>\n",
        "      <td>13781</td>\n",
        "      <td>520</td>\n",
        "      <td>44</td>\n",
@@ -259,7 +246,6 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>00603</td>\n",
-       "      <td>48317</td>\n",
        "      <td>35550</td>\n",
        "      <td>1572</td>\n",
        "      <td>8</td>\n",
@@ -274,7 +260,6 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>00606</td>\n",
-       "      <td>5435</td>\n",
        "      <td>3697</td>\n",
        "      <td>12</td>\n",
        "      <td>15</td>\n",
@@ -289,7 +274,6 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>00610</td>\n",
-       "      <td>25413</td>\n",
        "      <td>6582</td>\n",
        "      <td>525</td>\n",
        "      <td>0</td>\n",
@@ -306,12 +290,12 @@
        "</div>"
       ],
       "text/plain": [
-       "  zip_code  total_pop  white_alone  black_alone  asian_alone  chinese_persons  \\\n",
-       "0    00601      16721        13904          314           19                0   \n",
-       "1    00602      37510        13781          520           44               18   \n",
-       "2    00603      48317        35550         1572            8                8   \n",
-       "3    00606       5435         3697           12           15                0   \n",
-       "4    00610      25413         6582          525            0                0   \n",
+       "  zip_code  white_alone  black_alone  asian_alone  chinese_persons  \\\n",
+       "0    00601        13904          314           19                0   \n",
+       "1    00602        13781          520           44               18   \n",
+       "2    00603        35550         1572            8                8   \n",
+       "3    00606         3697           12           15                0   \n",
+       "4    00610         6582          525            0                0   \n",
        "\n",
        "   hispanic_pop  pct_white  pct_black  pct_asian  pct_chinese  pct_hispanic  \n",
        "0         16630   0.831529   0.018779   0.001136     0.000000      0.994558  \n",
@@ -321,7 +305,7 @@
        "4         24663   0.259001   0.020659   0.000000     0.000000      0.970488  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,13 +390,15 @@
     "# 3. Reorder the DataFrame\n",
     "df = df[cols]\n",
     "\n",
+    "df = df.drop(columns=[\"total_pop\"])\n",
+    "\n",
     "# Inspect\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "d5832b49",
    "metadata": {},
    "outputs": [],
